some refactors and fix some bugs